--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Human_Resource> db.employee.find({"salary": {$gt : "30000"}})
   }
 ]
 
-Q.3 ) Query the collection "employee" and list all the employee who are having Experience more than 2 years.
+Q.3 ) Query the collection "employee" and list all the employee who are having Experience is 2 years.
 
 Human_Resource> db.employee.find({"overallExp" : '2'})
 [
